RESOLVED FIXED97505
ValueToInt32 bool case does bad things to registers
https://bugs.webkit.org/show_bug.cgi?id=97505
Summary ValueToInt32 bool case does bad things to registers
Filip Pizlo
Reported 2012-09-24 17:41:26 PDT
Patch forthcoming.
Attachments
the patch (7.19 KB, patch)
2012-09-24 17:43 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2012-09-24 17:43:51 PDT
Created attachment 165478 [details] the patch
Mark Hahnenberg
Comment 2 2012-09-24 17:45:21 PDT
Comment on attachment 165478 [details] the patch r=me
Filip Pizlo
Comment 3 2012-09-24 17:46:40 PDT
Note You need to log in before you can comment on or make changes to this bug.