ValueToInt32 bool case does bad things to registers https://bugs.webkit.org/show_bug.cgi?id=97505 <rdar://problem/12356331>

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileValueToInt32):

LayoutTests:

* fast/js/dfg-bool-to-int32-reuse-expected.txt: Added.
* fast/js/dfg-bool-to-int32-reuse.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/dfg-bool-to-int32-reuse.js: Added.
(foo):



Canonical link: https://commits.webkit.org/115457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129435 268f45cc-cd09-0410-ab3c-d52691b4dbfc